# aihackathon-contract

./: .gitignore  package.json  swanky.config.json
contracts/psp34_contract/: Cargo.toml
contracts/psp34_contract/src/: lib.rs
